# jinro-judgment-fansite

./: .gitignore  404.html  CLAUDE.md  LICENSE  README.md  REVIEW.md  TEST_COVERAGE_ANALYSIS.md  ai-advisor.html  app-release-concern-issues.md  bleach-quotes.html  capacitor.config.ts  character.html  characters-gallery.html  characters.html  composition.html  contact.html  copipe.html  eslint.config.js  exclusion.html  faq.html  gallery.html  glossary.html  guide.html  index-react.html  index.html  main.js  manifest.json  memo.html  notepad.html  package-lock.json  package.json  pc-app.html  preload.js  privacy.html  queen-wise.html  quiz.html  robots.txt  role-compatibility.html  roles.html  room-id.html  (+15 more)
.github/workflows/: ci.yml
android/app/: build.gradle
css/: sidebar.css  style.css
data/: jinro.db
icons/: README.md
js/: app.js  common.js  roles-data.js  theme.js
public/: sw.js
public/icons/: README.md
public/js/: common.js  roles-data.js
scripts/: generate-icons.mjs  init-db.js  update-html-ios.mjs
src/: App.css  App.tsx  app.js  index.css  index.html  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/app/: globals.css  layout.js  layout.tsx  page.js  page.module.css  page.tsx
src/components/: AdSlot.tsx  Footer.tsx  Header.tsx  Layout.tsx  RatingStars.tsx  RoleAffinityTable.tsx  RoleCard.tsx  Sidebar.tsx  StatusBar.tsx  StatusRadarChart.tsx  TierRow.tsx
src/data/: bias-tier-list.ts  characters.ts  roles.ts  yaminabe-incompatible-roles.json
src/lib/: db.ts  schema.sql
src/pages/: Beginner.tsx  Home.tsx  (+3 more)
(+28 files in other folders)
